adds nav bar and initial ui-ux

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" href="logo192.png" /> 
+    <script src="https://kit.fontawesome.com/ec796bd4f8.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Just-Chat-App</title>
   </head>
